# emby-wrapped

./: .gitignore  config.example.json  pyproject.toml
emby_wrapped/: __main__.py  cli.py  config.json  config.py  console.py  context.py  debug_views.py  layout.py  logging_setup.py  orchestrator.py  themes.py  util.py
emby_wrapped.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
emby_wrapped/data/: emby_api.py  enrich.py  playback_db.py
emby_wrapped/generators/: __init__.py  base.py  html_v1.py  registry.py
emby_wrapped/metrics/: report_builder.py
emby_wrapped/output/: assets.py  html_shell.py
emby_wrapped/widgets/: __init__.py  base.py  devices.py  heatmap.py  overview.py  playtime_by_dow.py  playtime_by_hour.py  playtime_by_month.py  playtime_split.py  registry.py  top_titles.py
examples/: config.example.json  layout.example.json
output-of-app/emby_wrapped_v2.1_b/AaronP1523/: index.html
output-of-app/emby_wrapped_v2.1_b/big-scary-bear/: index.html
output-of-app/emby_wrapped_v2.1_b/cjloughlin/: index.html
output-of-app/emby_wrapped_v2.1_b/cublou10/: index.html
output-of-app/emby_wrapped_v2.1_b/darkstar77/: index.html
output-of-app/emby_wrapped_v2.1_b/erball627/: index.html
output-of-app/emby_wrapped_v2.1_b/forschaaf/: index.html
output-of-app/emby_wrapped_v2.1_b/fridge-fins/: index.html
output-of-app/emby_wrapped_v2.1_b/jazz-verboss/: index.html
output-of-app/emby_wrapped_v2.1_b/johnny-ohhh/: index.html
past-code/: emby_wrapped.py  emby_wrapped_v2.py  emby_wrapped_v2_1.py
(+14 files in other folders)
