[project]
name = "emby-wrapped"
version = "0.2.1"
description = "Spotify Wrapped-style year-end recap for Emby users (Playback Reporting DB)"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
rich = ["rich>=13.7"]

[project.scripts]
emby-wrapped = "emby_wrapped.cli:main"
